--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,16 +13,16 @@ jobs:
     strategy:
       matrix:
         operating-system: [ ubuntu-latest ]
-        php: [ '8.0', '8.1', '8.2' ]
+        php: [ '8.1', '8.2' ]
         symfony: ['4.4.*', '5.4.*', '6.1.*', '6.2.*', '6.3.*']
 
-        exclude:
-          - php: '8.0'
-            symfony: '6.1.*'
-          - php: '8.0'
-            symfony: '6.2.*'
-          - php: '8.0'
-            symfony: '6.3.*'
+        # exclude:
+        #   - php: '8.0'
+        #     symfony: '6.1.*'
+        #   - php: '8.0'
+        #     symfony: '6.2.*'
+        #   - php: '8.0'
+        #     symfony: '6.3.*'
 
     steps:
       - uses: actions/checkout@master
