--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,12 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.1",
+        "doctrine/doctrine-bundle": "^2.7",
         "doctrine/orm": "^2.12",
         "idmarinas/common-bundle": "^2.0",
         "symfony/config": "^4.4 | ^5.4 | ^6.1",
-        "symfony/dependency-injection": "^4.4 | ^5.4 | ^6.1"
+        "symfony/dependency-injection": "^4.4 | ^5.4 | ^6.1",
+        "symfony/security-bundle": "^4.4 | ^5.4 | ^6.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.21",
