--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# Created by https://www.toptal.com/developers/gitignore/api/macos,linux,symfony,windows,composer,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,linux,symfony,windows,composer,visualstudiocode
-
-### Composer ###
-composer.phar
+###> idmarinas/settings-bundle ###
+**/*.dist
+/build/
 /vendor/
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
@@ -57,54 +55,7 @@ Temporary Items
 
 # PHPUnit
 /phpunit.xml
-.phpunit.result.cache
-
-# Build data
-/build/
-
-# Composer PHAR
-/composer.phar
-
-### VisualStudioCode ###
-.vscode/*
-!.vscode/tasks.json
-!.vscode/launch.json
-*.code-workspace
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-.ionide
-
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# dist files/folder
-*.dist
-# Not ignore
-!phpunit.xml.dist
-
-# End of https://www.toptal.com/developers/gitignore/api/macos,linux,symfony,windows,composer,visualstudiocode
+!/phpunit.xml.dist
+/.phpunit.result.cache
+/composer.lock
+###< idmarinas/settings-bundle ###
