--- a/composer.json
+++ b/composer.json
@@ -1,71 +1,70 @@
 {
-    "name": "idmarinas/settings-bundle",
-    "description": "Settings system for Symfony applications, editable via web user interface.",
-    "type": "symfony-bundle",
-    "license": "BSD-3-Clause",
-    "keywords": ["config", "configuration", "settings", "user-settings"],
-    "authors": [
-        {
-            "name": "Iván Diaz Marinas (IDMarinas)",
-            "email": "35842929+idmarinas@users.noreply.github.com",
-            "homepage": "https://github.com/idmarinas/settings-bundle",
-            "role": "Developer"
-        }
-    ],
-    "support": {
-        "issues": "https://github.com/idmarinas/settings-bundle/issues"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require": {
-        "php": "^8.1",
-        "doctrine/doctrine-bundle": "^2.7",
-        "doctrine/orm": "^2.12",
-        "idmarinas/common-bundle": "^2.0",
-        "symfony/config": "^4.4 | ^5.4 | ^6.1",
-        "symfony/dependency-injection": "^4.4 | ^5.4 | ^6.1",
-        "symfony/security-bundle": "^4.4 | ^5.4 | ^6.1"
-    },
-    "require-dev": {
-        "fakerphp/faker": "^1.21",
-        "matthiasnoback/symfony-config-test": "^4.2",
-        "matthiasnoback/symfony-dependency-injection-test": "^4.2",
-        "nyholm/symfony-bundle-test": "^2.0",
-        "phpunit/phpunit": "^9.5",
-        "rector/rector": "^0.15",
-        "symfony/framework-bundle": "^4.4 | ^5.4 | ^6.1",
-        "symfony/phpunit-bridge": "^5.3",
-        "symfony/test-pack": "^1.0"
-    },
-    "config": {
-        "allow-plugins": {
-            "composer/package-versions-deprecated": true,
-            "symfony/flex": true,
-            "symfony/runtime": true
-        },
-        "optimize-autoloader": true,
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "Idm\\Bundle\\Settings\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Idm\\Bundle\\Settings\\Tests\\": "tests/"
-        }
-    },
-    "funding": [
-        {
-            "type": "paypal",
-            "url": "https://www.paypal.me/idmarinas"
-        }
-    ],
-    "scripts": {
-        "test": "phpunit"
-    }
+	"name": "idmarinas/settings-bundle",
+	"type": "symfony-bundle",
+	"license": "BSD-3-Clause",
+	"keywords": ["symfony-bundle", "settings-bundle", "user-settings"],
+	"homepage": "https://github.com/idmarinas/settings-bundle",
+	"authors": [
+		{
+			"name": "Iván Diaz Marinas (IDMarinas)",
+			"email": "35842929+idmarinas@users.noreply.github.com",
+			"role": "Creator, Developer"
+		}
+	],
+	"support": {
+		"issues": "https://github.com/idmarinas/settings-bundle/issues"
+	},
+	"minimum-stability": "stable",
+	"prefer-stable": true,
+	"require": {
+		"php": "^8.2",
+		"symfony/dependency-injection": "^6.4 | ^7.0",
+		"symfony/framework-bundle": "^6.4 | ^7.0"
+	},
+	"require-dev": {
+		"dama/doctrine-test-bundle": "^8.2",
+		"doctrine/doctrine-fixtures-bundle": "^3.0 | ^4.0",
+		"phpunit/phpunit": "^9.6",
+		"rector/rector": "^1.2",
+		"symfony/console": "^6.4 | ^7.0",
+		"symfony/phpunit-bridge": "^7.2",
+		"symfony/runtime": "^6.4 | ^7.0",
+		"twig/twig": "^3.16",
+		"zenstruck/foundry": "^2.3"
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/package-versions-deprecated": true,
+			"symfony/flex": true,
+			"symfony/runtime": true
+		},
+		"optimize-autoloader": false,
+		"preferred-install": {
+			"*": "dist"
+		},
+		"sort-packages": true
+	},
+	"autoload": {
+		"psr-4": {
+			"Idm\\Bundle\\Settings\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"App\\": "app/src/",
+			"Idm\\Bundle\\Settings\\Tests\\": "tests/",
+			"DataFixtures\\": "fixtures/",
+			"Factory\\": "factories/"
+		}
+	},
+	"funding": [
+		{
+			"type": "paypal",
+			"url": "https://www.paypal.me/idmarinas"
+		},
+		{
+			"type": "github-sponsors",
+			"url": "https://github.com/sponsors/idmarinas"
+		}
+	]
 }
