feat(dependencies): add symfony/cache requirement to composer.json

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
 	"prefer-stable": true,
 	"require": {
 		"php": "^8.2",
+		"symfony/cache": "^6.4 | ^7.0",
 		"symfony/dependency-injection": "^6.4 | ^7.0",
 		"symfony/framework-bundle": "^6.4 | ^7.0"
 	},
